@@ -9,7 +9,6 @@
 %  This Software and all associated files are released unter the 
 %  GNU General Public License (GPL), see LICENSE for details.
 %  
-%  $Author$
 %  $Id$
 
 function self = add_listener(self, listener)
