@@ -1,4 +1,12 @@
+%Return the collection of test cases.
+%
+%  See also TEST_CASE
+
+%  This Software and all associated files are released unter the 
+%  GNU General Public License (GPL), see LICENSE for details.
+%  
+%  $Id$
+
 function t = get_tests(self)
 
 t = self.tests;
-
