@@ -1,8 +1,14 @@
 function self = test_case(name, subclass, function_name)
-%Base class for test suites.
-%  The constructer creates an object of the class test_case running the 
-%  test method with given name. If no name is passed, the method 
-%  'run_test' is called.
+%Base class for a test suite.
+%  Inherit your class-based test suite from this base class. Fixture methods
+%  (set_up and tear_down) get inherited or overloaded. You should not overload
+%  methods named 'get_function_name', 'get_name' or 'str'.
+%
+%  Upon execution, for every test method, a distinct test_case object will be
+%  instanciated, receiving the test method's name in the 'name' argument. This
+%  is tricky to behold: Your test_case child class contains several test_
+%  methods, but is instanciated over and again separately for every one of them.
+%  If no name is passed, the method 'run_test' is called.
 %
 %  Class Info / Example
 %  ====================
@@ -49,7 +55,7 @@ if nargin < 1 || isempty(name)
    name = 'run_test';
 end
 
-% subclass argument given, reflect on it a bit
+% if subclass argument given, check that the method can be resolved
 if nargin >= 2
    r = mlunit_reflect(subclass);
    if (~method_exists(r, name))
